--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-imagemin": "^3.0.0",
+    "gulp-imageoptim": "^1.0.4",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
